# GB-proxy

./: .gitattributes  .gitignore  MANIFEST.in  README.md  config.py.example  gb-proxy.spec  proxy.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  start_macproxy.sh
extensions/chatgpt/: chatgpt.py
extensions/claude/: claude.py
extensions/gemini/: gemini.py
extensions/hackaday/: hackaday.py
extensions/hacksburg/: hacksburg.py
extensions/hunterirving/: hunterirving.py
extensions/kagi/: kagi.py
extensions/mistral/: mistral.py
extensions/notyoutube/: notyoutube.py
extensions/npr/: npr.py
extensions/weather/: weather.py
extensions/websimulator/: websimulator.py
extensions/wiby/: wiby.py
extensions/wikipedia/: wikipedia.py
gb_proxy/: __init__.py  application.py  cli.py
packaging/: build-rpm.sh  gb-proxy.1  gb-proxy.service  gb-proxy.sysconfig  gb-proxy.sysusers
presets/geobench/: geobench.py
tests/: __init__.py  config_stub.py  test_application.py  test_cli.py  test_html_utils.py  test_image_utils.py  test_proxy.py  test_resource_registry.py  test_system_utils.py
utils/: html_utils.py  http_utils.py  image_utils.py  resource_registry.py  system_utils.py
