[metadata]
name = gb-proxy
version = 0.1.0
description = Transcoding HTTP proxy for GEOBENCH and legacy web clients
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
license_files = LICENSE
url = https://github.com/salvogendut/GB-proxy
project_urls =
    Issues = https://github.com/salvogendut/GB-proxy/issues
classifiers =
    Development Status :: 3 - Alpha
    Environment :: No Input/Output (Daemon)
    Framework :: Flask
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Topic :: Internet :: Proxy Servers

[options]
python_requires = >=3.9
packages = find_namespace:
py_modules = proxy
include_package_data = True
install_requires =
    Flask>=2,<4
    Werkzeug>=2,<4
    beautifulsoup4>=4.9,<5
    html5lib>=1.1,<2
    Pillow>=8.1,<13
    requests>=2.25,<3
    waitress>=1.4.4,<4

[options.packages.find]
where = .
include =
    gb_proxy*
    extensions*
    presets*
    utils*
exclude =
    tests*

[options.package_data]
extensions.kagi = template.html
extensions.notyoutube = videos.json

[options.entry_points]
console_scripts =
    gb-proxy = gb_proxy.cli:main

[options.extras_require]
svg =
    pillow-svg @ git+https://github.com/smallsco/pillow-svg.git@6b58c2a2d8502d07770ce81cea56ed68e266a6f1
openai =
    openai
anthropic =
    anthropic
gemini =
    google-genai
mistral =
    mistralai
